# notes-rust

./: .gitignore  Cargo.toml  README.md  makefile
c_projects/nbody/: makefile  nbody.c
src/: main.rs  nbody_idiom.rs  nbody_v1.rs  nbody_v2.rs  nbody_v3.rs  nbody_v4.rs  nbody_v5.rs  nbodyv1.rs
