[package]
name = "notes-rust"
version = "0.1.0"
authors = ["pedro"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
opt-level = 3
codegen-units = 1
debug = 2

[build]
target = "x86_64-unknown-linux-gnu"
rustflags = [ "-C", "target-cpu=core2" ]